Add card info block

--- a/index.html
+++ b/index.html
@@ -143,6 +143,90 @@
                 </div>
             </section>
             
+            <!-- main notif -->
+
+            <div class="notif">
+                <h3 class="notif-title">Хотите быть в курсе свежих новостей? <br>  Включите уведомления!
+                </h3>
+                <button class="notif-btn">Включит</button>
+            </div>
+
+            <!-- main info section -->
+
+            <section class="info-section">
+                <h2 class="info-title">В мире</h2>
+                <div class="info-block">
+                    <div class="info-left">
+                        <div class="info-card">
+                            <img class="info-card-img" src="img/info-card-img_1.jpg" width="210" height="165" alt="">
+                            <div class="info-card-content">
+                                <h3 class="info-card-title">Китайский Чунцин запустил чартерный рейс для студентов до Британии</h3>
+                                <p class="info-card-text">Чартерный рейс с 244 китайскими студентами вылетел из города центрального подчинения Чунцина на юго-западе Китая в британский Манчестер...</p>
+                                <div class="info-card-about">
+                                    <img class="info-card-about-img" src="img/card_icon-1.png" width="20" height="20" alt="">
+                                    ИА Красная Весна 12:25
+                                </div>
+                            </div>
+                        </div>
+                        <div class="info-card">
+                            <img class="info-card-img" src="img/info-card-img_1.jpg" width="210" height="165" alt="">
+                            <div class="info-card-content">
+                                <h3 class="info-card-title">Китайский Чунцин запустил чартерный рейс для студентов до Британии</h3>
+                                <p class="info-card-text">Чартерный рейс с 244 китайскими студентами вылетел из города центрального подчинения Чунцина на юго-западе Китая в британский Манчестер...</p>
+                                <div class="info-card-about">
+                                    <img class="info-card-about-img" src="img/card_icon-1.png" width="20" height="20" alt="">
+                                    ИА Красная Весна 12:25
+                                </div>
+                            </div>
+                        </div>
+                        <div class="info-card">
+                            <img class="info-card-img" src="img/info-card-img_1.jpg" width="210" height="165" alt="">
+                            <div class="info-card-content">
+                                <h3 class="info-card-title">Китайский Чунцин запустил чартерный рейс для студентов до Британии</h3>
+                                <p class="info-card-text">Чартерный рейс с 244 китайскими студентами вылетел из города центрального подчинения Чунцина на юго-западе Китая в британский Манчестер...</p>
+                                <div class="info-card-about">
+                                    <img class="info-card-about-img" src="img/card_icon-1.png" width="20" height="20" alt="">
+                                    ИА Красная Весна 12:25
+                                </div>
+                            </div>
+                        </div>
+                        <div class="info-card">
+                            <img class="info-card-img" src="img/info-card-img_1.jpg" width="210" height="165" alt="">
+                            <div class="info-card-content">
+                                <h3 class="info-card-title">Китайский Чунцин запустил чартерный рейс для студентов до Британии</h3>
+                                <p class="info-card-text">Чартерный рейс с 244 китайскими студентами вылетел из города центрального подчинения Чунцина на юго-западе Китая в британский Манчестер...</p>
+                                <div class="info-card-about">
+                                    <img class="info-card-about-img" src="img/card_icon-1.png" width="20" height="20" alt="">
+                                    ИА Красная Весна 12:25
+                                </div>
+                            </div>
+                        </div>
+                        <button class="info-btn">Показать ещё</button>
+                    </div>
+                    <div class="info-right">
+                        <div class="right-info-block">
+                            <h2 class="info-right-heading">Главное</h2>
+                            <div class="right-info-box">
+                                 <h3 class="right-info-title">В Фергане создадут узбекско-пакистанский университет</h3>
+                                <p class="right-info-time">Sputnik Узбекистан 14:09</p>
+                            </div>                         
+                            <div class="right-info-box">
+                                 <h3 class="right-info-title">В Фергане создадут узбекско-пакистанский университет</h3>
+                                <p class="right-info-time">Sputnik Узбекистан 14:09</p>
+                            </div>                         
+                            <div class="right-info-box">
+                                 <h3 class="right-info-title">В Фергане создадут узбекско-пакистанский университет</h3>
+                                <p class="right-info-time">Sputnik Узбекистан 14:09</p>
+                            </div>                         
+                            <div class="right-info-box">
+                                 <h3 class="right-info-title">В Фергане создадут узбекско-пакистанский университет</h3>
+                                <p class="right-info-time">Sputnik Узбекистан 14:09</p>
+                            </div>  
+                        </div>
+                        <img class="right-info-img" src="img/right-box-img.jpg"  height="335" alt="">                       
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 
