--- a/index.html
+++ b/index.html
@@ -227,13 +227,14 @@
                     </div>
                 </div>
             </section>
+
         </div>
     </main>
 
     <!-- Site Footer -->
 
     <footer class="site-footer">
-        <div class="container">
+        <div class="container footer-container">
             <div class="footer-top">
                 <div class="footer-logo">
                     <a class="footer-logo-link" href="#"><img class="footer-logo-img" src="img/footer-logo.svg"
