--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- main shop img -->
 
             <div class="shop-img">
-                <img src="img/shop-img.jpg" width="1200" height="128" alt="shop img">
+                <img src="img/shop-img.jpg" width="1200" height="128" alt="shop img" srcset="img/shop-img.jpg 1x, img/shop-img@2x.jpg 2x">
             </div>
 
             <!-- main card section -->
@@ -79,9 +79,9 @@
                         <p class="card-text">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на
                             должность...</p>
                     </div>
-                    <img class="card-img" width="359" height="165" src="img/card_img-1.jpg" alt="">
+                    <img class="card-img" width="359" height="165" src="img/card-1.jpg" alt="" srcset="img/card-1.jpg 1x, img/card-1@2x.jpg 2x">
                     <div class="card-info">
-                        <img class="card-icon" src="img/card_icon-1.png" width="20" height="20" alt="">
+                        <img class="card-icon" src="img/card-icon-1.jpg" width="20" height="20" alt="" srcset="img/card-icon-1.jpg 1x, img/card-icon-1@2x.jpg 2x">
                         <p>ИА Красная Весна 15:55</p>
                     </div>
                 </div>
@@ -91,9 +91,9 @@
                         <p class="card-text">Новое исследование ученых университета Иллинойса объединяет полевые
                             данные...</p>
                     </div>
-                    <img class="card-img" width="359" height="165" src="img/card_img-2.jpg" alt="">
+                    <img class="card-img" width="359" height="165" src="img/card-2.jpg" alt="" srcset="img/card-2.jpg 1x, img/card-2@2x.jpg 2x">
                     <div class="card-info">
-                        <img class="card-icon" src="img/card_icon-2.png" width="20" height="20" alt="">
+                        <img class="card-icon" src="img/card-icon-2.jpg" width="20" height="20" alt="" srcset="img/card-icon-2.jpg 1x, img/card-icon-2@2x.jpg 2x">
                         <p>Газета.Ru 12:54</p>
                     </div>
                 </div>
@@ -102,9 +102,9 @@
                         <h3 class="card-title">Baidu запустила публичный сервис роботакси Apollo Go в Шанхае</h3>
                         <p class="card-text">Автопарк Baidu состоит из модифицированных электромобилей EV... </p>
                     </div>
-                    <img class="card-img" width="359" height="165" src="img/card_img-3.jpg" alt="">
+                    <img class="card-img" width="359" height="165" src="img/card-3.jpg" alt="" srcset="img/card-3.jpg 1x, img/card-3@2x.jpg 2x">
                     <div class="card-info">
-                        <img class="card-icon" src="img/card_icon-3.png" width="20" height="20" alt="">
+                        <img class="card-icon" src="img/card-icon-3.jpg" width="20" height="20" alt="" srcset="img/card-icon-3.jpg 1x, img/card-icon-3@2x.jpg 2x">
                         <p>Хайтек+ 13:44</p>
                     </div>
                 </div>
@@ -113,9 +113,9 @@
                         <h3 class="card-title">Стали известны ёмкости аккумуляторов всех моделей iPhone 13</h3>
                         <p class="card-text">Во время презентации iPhone 13 Apple придала большое значения...</p>
                     </div>
-                    <img class="card-img" width="359" height="165" src="img/card_img-4.jpg" alt="">
+                    <img class="card-img" width="359" height="165" src="img/card-4.jpg" alt="" srcset="img/card-4.jpg 1x, img/card-4@2x.jpg 2x">
                     <div class="card-info">
-                        <img class="card-icon" src="img/card_icon-4.png" width="20" height="20" alt="">
+                        <img class="card-icon" src="img/card-icon-4.jpg" width="20" height="20" alt="" srcset="img/card-icon-4.jpg 1x, img/card-icon-4@2x.jpg 2x">
                         <p>Digger.ru 14:25</p>
                     </div>
                 </div>
@@ -125,9 +125,9 @@
                             SARS-CoV-2</h3>
                         <p class="card-text">Во время презентации iPhone 13 Apple придала большое значение...</p>
                     </div>
-                    <img class="card-img" width="359" height="165" src="img/card_img-5.jpg" alt="">
+                    <img class="card-img" width="359" height="165" src="img/card-5.jpg" alt="" srcset="img/card-5.jpg 1x, img/card-5@2x.jpg 2x">
                     <div class="card-info">
-                        <img class="card-icon" src="img/card_icon-5.png" width="20" height="20" alt="">
+                        <img class="card-icon" src="img/card-icon-5.jpg" width="20" height="20" alt="" srcset="img/card-icon-5.jpg 1x, img/card-icon-5@2x.jpg 2x">
                         <p>Lenta.ru 10:54</p>
                     </div>
                 </div>
@@ -137,9 +137,9 @@
                         <p class="card-text">Две модели китайского бренда JAC из пяти, представленных на российском...
                         </p>
                     </div>
-                    <img class="card-img" width="359" height="165" src="img/card_img-6.jpg" alt="">
+                    <img class="card-img" width="359" height="165" src="img/card-6.jpg" alt="" srcset="img/card-6.jpg 1x, img/card-6@2x.jpg 2x">
                     <div class="card-info">
-                        <img class="card-icon" src="img/card_icon-6.png" width="20" height="20" alt="">
+                        <img class="card-icon" src="img/card-icon-6.jpg" width="20" height="20" alt="" srcset="img/card-icon-6.jpg 1x, img/card-icon-6@2x.jpg 2x">
                         <p>Тарантас Ньюс 10:44</p>
                     </div>
                 </div>
@@ -160,46 +160,46 @@
                 <div class="info-block">
                     <div class="info-left">
                         <div class="info-card">
-                            <img class="info-card-img" src="img/info-card-img_1.jpg" width="210" height="165" alt="">
+                            <img class="info-card-img" src="img/info-img-1.jpg" width="210" height="165" alt="" srcset="img/info-img-1.jpg 1x, img/info-img-1@2x.jpg 2x">
                             <div class="info-card-content">
                                 <h3 class="info-card-title">Китайский Чунцин запустил чартерный рейс для студентов до Британии</h3>
                                 <p class="info-card-text">Чартерный рейс с 244 китайскими студентами вылетел из города центрального подчинения Чунцина на юго-западе Китая в британский Манчестер...</p>
                                 <div class="info-card-about">
-                                    <img class="info-card-about-img" src="img/card_icon-1.png" width="20" height="20" alt="">
+                                    <img class="info-card-about-img" src="img/card-icon-1.jpg" width="20" height="20" alt="" srcset="img/card-icon-1.jpg 1x, img/card-icon-1@2x.jpg 2x">
                                     ИА Красная Весна 12:25
                                 </div>
                             </div>
                         </div>
                         <div class="info-card">
-                            <img class="info-card-img" src="img/info-card-img_1.jpg" width="210" height="165" alt="">
+                            <img class="info-card-img" src="img/info-img-2.jpg" width="210" height="165" alt="" srcset="img/info-img-2.jpg 1x,img/info-img-2@2x.jpg 2x">
                             <div class="info-card-content">
-                                <h3 class="info-card-title">Китайский Чунцин запустил чартерный рейс для студентов до Британии</h3>
-                                <p class="info-card-text">Чартерный рейс с 244 китайскими студентами вылетел из города центрального подчинения Чунцина на юго-западе Китая в британский Манчестер...</p>
+                                <h3 class="info-card-title">В Германии выпустят ограниченную партию плюшевых мишек в образе Меркель</h3>
+                                <p class="info-card-text">БЕРЛИН, 19 сентября. / ТАСС/. Знаменитая фабрика по производству плюшевых игрушек в городе Кобург (федеральная земля Бавария) изготовила уникального...</p>
                                 <div class="info-card-about">
-                                    <img class="info-card-about-img" src="img/card_icon-1.png" width="20" height="20" alt="">
-                                    ИА Красная Весна 12:25
+                                    <img class="info-card-about-img" src="img/info-icon-2.jpg" width="20" height="20" alt="" srcset="img/info-icon-2.jpg 1x, img/info-icon-2@2x.jpg 2x">
+                                    ТАСС 11:35
                                 </div>
                             </div>
                         </div>
                         <div class="info-card">
-                            <img class="info-card-img" src="img/info-card-img_1.jpg" width="210" height="165" alt="">
+                            <img class="info-card-img" src="img/info-img-3.jpg" width="210" height="165" alt="" srcset="img/info-img-3.jpg 1x, img/info-img-3@2x.jpg 2x">
                             <div class="info-card-content">
-                                <h3 class="info-card-title">Китайский Чунцин запустил чартерный рейс для студентов до Британии</h3>
-                                <p class="info-card-text">Чартерный рейс с 244 китайскими студентами вылетел из города центрального подчинения Чунцина на юго-западе Китая в британский Манчестер...</p>
+                                <h3 class="info-card-title">Акции КНР утратили доверие инвесторов. Что делать с бумагами прямо сейчас</h3>
+                                <p class="info-card-text">За последние месяцы инвесторы в китайский рынок пережили настоящее потрясение — из-за ужесточения регулирования технологического сектора и критики некоторых...</p>
                                 <div class="info-card-about">
-                                    <img class="info-card-about-img" src="img/card_icon-1.png" width="20" height="20" alt="">
-                                    ИА Красная Весна 12:25
+                                    <img class="info-card-about-img" src="img/info-icon-3.jpg" width="20" height="20" alt="" srcset="img/info-icon-3.jpg 1x, img/info-icon-3@2x.jpg 2x">
+                                    РБК Инвестиции 09:35
                                 </div>
                             </div>
                         </div>
                         <div class="info-card">
-                            <img class="info-card-img" src="img/info-card-img_1.jpg" width="210" height="165" alt="">
+                            <img class="info-card-img" src="img/info-img-4.jpg" width="210" height="165" alt="" srcset="img/info-img-4.jpg 1x, img/info-img-4@2x.jpg 2x">
                             <div class="info-card-content">
-                                <h3 class="info-card-title">Китайский Чунцин запустил чартерный рейс для студентов до Британии</h3>
-                                <p class="info-card-text">Чартерный рейс с 244 китайскими студентами вылетел из города центрального подчинения Чунцина на юго-западе Китая в британский Манчестер...</p>
+                                <h3 class="info-card-title">Китай раскритиковал заключенный Австралией, США и Великобританией антикитайский союз AUKUS</h3>
+                                <p class="info-card-text">Не только Франция, которая лишилась многомиллиардного контракта с Австралий, осталась недовольна созданием трехстороннего оборонного альянса AUKUS, пишет Anna-News.info</p>
                                 <div class="info-card-about">
-                                    <img class="info-card-about-img" src="img/card_icon-1.png" width="20" height="20" alt="">
-                                    ИА Красная Весна 12:25
+                                    <img class="info-card-about-img" src="img/info-icon-4.jpg" width="20" height="20" alt="" srcset="img/info-icon-4.jpg 1x, img/info-icon-4@2x.jpg 2x">
+                                    Solenka.info 19:43
                                 </div>
                             </div>
                         </div>
@@ -225,7 +225,7 @@
                                 <p class="right-info-time">Sputnik Узбекистан 14:09</p>
                             </div>  
                         </div>
-                        <img class="right-info-img" src="img/right-box-img.jpg"  height="335" alt="">                       
+                        <img class="right-info-img" src="img/info-big-img.jpg"  height="335" alt="" srcset="img/info-big-img.jpg 1x, img/info-big-img@2x.jpg 2x">                       
                     </div>
                 </div>
             </section>
