--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- CSS links -->
     
     <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/shared.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>N24</title>
 </head>
