--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
             <!-- Header nav -->
 
             <ul class="header-nav">
-                <li><a class="header-nav-link" href="#">Главное</a></li>
-                <li><a class="header-nav-link" href="#">Интересное</a></li>
-                <li><a class="header-nav-link" href="#">Экономика</a></li>
-                <li><a class="header-nav-link" href="#">Политика</a></li>
-                <li><a class="header-nav-link" href="#">Общество</a></li>
-                <li><a class="header-nav-link" href="#">Технологии</a></li>
-                <li><a class="header-nav-link" href="#">Спорт</a></li>
-                <li><a class="header-nav-link" href="#">Культура</a></li>
-                <li><a class="header-nav-link" href="#">Происшествия</a></li>
-                <li><a class="header-nav-link" href="#">Наука</a></li>
+                <li><a class="header-nav-link" href="index.html">Главное</a></li>
+                <li><a class="header-nav-link" href="news-list.html">Интересное</a></li>
+                <li><a class="header-nav-link" href="news-list.html">Экономика</a></li>
+                <li><a class="header-nav-link" href="news-list.html">Политика</a></li>
+                <li><a class="header-nav-link" href="news-list.html">Общество</a></li>
+                <li><a class="header-nav-link" href="news-list.html">Технологии</a></li>
+                <li><a class="header-nav-link" href="news-list.html">Спорт</a></li>
+                <li><a class="header-nav-link" href="news-list.html">Культура</a></li>
+                <li><a class="header-nav-link" href="news-list.html">Происшествия</a></li>
+                <li><a class="header-nav-link" href="news-list.html">Наука</a></li>
             </ul>
             <hr class="line-break">
         </div>
@@ -71,7 +71,7 @@
             <!-- main shop img -->
 
             <div class="shop-img">
-                <a href="#"><img src="img/shop-img.jpg" width="1200" height="128" alt="shop img"
+                <a href="contact.html"><img src="img/shop-img.jpg" width="1200" height="128" alt="shop img"
                         srcset="img/shop-img.jpg 1x, img/shop-img@2x.jpg 2x"></a>
             </div>
 
@@ -80,8 +80,9 @@
             <section class="card-section">
                 <div class="card">
                     <div class="card-about">
-                        <h3 class="card-title">Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного
-                            соглашения</h3>
+                        <h3 class="card-title"> <a href="about.html">Кандидат на пост канцлера ФРГ Шольц назвал условия
+                                коалиционного
+                                соглашения</a></h3>
                         <p class="card-text">Лидер Социал-демократической партии Германии (СДПГ) и кандидат на
                             должность...</p>
                     </div>
@@ -95,7 +96,8 @@
                 </div>
                 <div class="card">
                     <div class="card-about">
-                        <h3 class="card-title">Ученые доказали экспериментальным путем пользу покровных культур</h3>
+                        <h3 class="card-title"> <a href="about.html">Ученые доказали экспериментальным путем пользу
+                                покровных культур</a></h3>
                         <p class="card-text">Новое исследование ученых университета Иллинойса объединяет полевые
                             данные...</p>
                     </div>
@@ -109,7 +111,8 @@
                 </div>
                 <div class="card">
                     <div class="card-about">
-                        <h3 class="card-title">Baidu запустила публичный сервис роботакси Apollo Go в Шанхае</h3>
+                        <h3 class="card-title"> <a href="about.html">Baidu запустила публичный сервис роботакси Apollo
+                                Go в Шанхае</a></h3>
                         <p class="card-text">Автопарк Baidu состоит из модифицированных электромобилей EV... </p>
                     </div>
                     <img class="card-img" width="359" height="165" src="img/card-3.jpg" alt=""
@@ -122,7 +125,8 @@
                 </div>
                 <div class="card">
                     <div class="card-about">
-                        <h3 class="card-title">Стали известны ёмкости аккумуляторов всех моделей iPhone 13</h3>
+                        <h3 class="card-title"> <a href="about.html">Стали известны ёмкости аккумуляторов всех моделей
+                                iPhone 13</a></h3>
                         <p class="card-text">Во время презентации iPhone 13 Apple придала большое значения...</p>
                     </div>
                     <img class="card-img" width="359" height="165" src="img/card-4.jpg" alt=""
@@ -135,8 +139,9 @@
                 </div>
                 <div class="card">
                     <div class="card-about">
-                        <h3 class="card-title">Nature: ученые смогли доказать природное происхождение коронавируса
-                            SARS-CoV-2</h3>
+                        <h3 class="card-title"> <a href="about.html">Nature: ученые смогли доказать природное
+                                происхождение коронавируса
+                                SARS-CoV-2</a></h3>
                         <p class="card-text">Во время презентации iPhone 13 Apple придала большое значение...</p>
                     </div>
                     <img class="card-img" width="359" height="165" src="img/card-5.jpg" alt=""
@@ -149,7 +154,8 @@
                 </div>
                 <div class="card">
                     <div class="card-about">
-                        <h3 class="card-title">Китайская марка JAC повысила цены на лифтбек и пикап в России</h3>
+                        <h3 class="card-title"> <a href="about.html">Китайская марка JAC повысила цены на лифтбек и
+                                пикап в России</a></h3>
                         <p class="card-text">Две модели китайского бренда JAC из пяти, представленных на российском...
                         </p>
                     </div>
@@ -181,8 +187,9 @@
                             <img class="info-card-img" src="img/info-img-1.jpg" width="210" height="165" alt=""
                                 srcset="img/info-img-1.jpg 1x, img/info-img-1@2x.jpg 2x">
                             <div class="info-card-content">
-                                <h3 class="info-card-title">Китайский Чунцин запустил чартерный рейс для студентов до
-                                    Британии</h3>
+                                <h3 class="info-card-title"> <a href="about.html">Китайский Чунцин запустил чартерный
+                                        рейс для студентов до
+                                        Британии</a></h3>
                                 <p class="info-card-text">Чартерный рейс с 244 китайскими студентами вылетел из города
                                     центрального подчинения Чунцина на юго-западе Китая в британский Манчестер...</p>
                                 <div class="info-card-about">
@@ -196,8 +203,9 @@
                             <img class="info-card-img" src="img/info-img-2.jpg" width="210" height="165" alt=""
                                 srcset="img/info-img-2.jpg 1x,img/info-img-2@2x.jpg 2x">
                             <div class="info-card-content">
-                                <h3 class="info-card-title">В Германии выпустят ограниченную партию плюшевых мишек в
-                                    образе Меркель</h3>
+                                <h3 class="info-card-title"> <a href="about.html">В Германии выпустят ограниченную
+                                        партию плюшевых мишек в
+                                        образе Меркель</a></h3>
                                 <p class="info-card-text">БЕРЛИН, 19 сентября. / ТАСС/. Знаменитая фабрика по
                                     производству плюшевых игрушек в городе Кобург (федеральная земля Бавария) изготовила
                                     уникального...</p>
@@ -212,8 +220,9 @@
                             <img class="info-card-img" src="img/info-img-3.jpg" width="210" height="165" alt=""
                                 srcset="img/info-img-3.jpg 1x, img/info-img-3@2x.jpg 2x">
                             <div class="info-card-content">
-                                <h3 class="info-card-title">Акции КНР утратили доверие инвесторов. Что делать с бумагами
-                                    прямо сейчас</h3>
+                                <h3 class="info-card-title"> <a href="about.html">Акции КНР утратили доверие инвесторов.
+                                        Что делать с бумагами
+                                        прямо сейчас</a></h3>
                                 <p class="info-card-text">За последние месяцы инвесторы в китайский рынок пережили
                                     настоящее потрясение — из-за ужесточения регулирования технологического сектора и
                                     критики некоторых...</p>
@@ -228,8 +237,9 @@
                             <img class="info-card-img" src="img/info-img-4.jpg" width="210" height="165" alt=""
                                 srcset="img/info-img-4.jpg 1x, img/info-img-4@2x.jpg 2x">
                             <div class="info-card-content">
-                                <h3 class="info-card-title">Китай раскритиковал заключенный Австралией, США и
-                                    Великобританией антикитайский союз AUKUS</h3>
+                                <h3 class="info-card-title"> <a href="about.html">Китай раскритиковал заключенный
+                                        Австралией, США и
+                                        Великобританией антикитайский союз AUKUS</a></h3>
                                 <p class="info-card-text">Не только Франция, которая лишилась многомиллиардного
                                     контракта с Австралий, осталась недовольна созданием трехстороннего оборонного
                                     альянса AUKUS, пишет Anna-News.info</p>
@@ -244,25 +254,31 @@
                     </div>
                     <div class="info-right">
                         <div class="right-info-block">
-                            <h2 class="info-right-heading">Главное</h2>
+                            <h2 class="info-right-heading"><a href="index.html">Главное</a></h2>
                             <div class="right-info-box">
-                                <h3 class="right-info-title">В Фергане создадут узбекско-пакистанский университет</h3>
+                                <h3 class="right-info-title"><a href="about.html">В Фергане создадут
+                                        узбекско-пакистанский университет</a></h3>
                                 <p class="right-info-time">Sputnik Узбекистан 14:09</p>
                             </div>
                             <div class="right-info-box">
-                                <h3 class="right-info-title">В Фергане создадут узбекско-пакистанский университет</h3>
-                                <p class="right-info-time">Sputnik Узбекистан 14:09</p>
+                                <h3 class="right-info-title"><a href="about.html">Узбекистан утвердил соглашение о
+                                        содействии занятости в
+                                        странах СНГ</a></h3>
+                                <p class="right-info-time">ИА Красная Весна 10:19</p>
                             </div>
                             <div class="right-info-box">
-                                <h3 class="right-info-title">В Фергане создадут узбекско-пакистанский университет</h3>
-                                <p class="right-info-time">Sputnik Узбекистан 14:09</p>
+                                <h3 class="right-info-title"><a href="about.html">В Узбекистане увеличиваются очереди за
+                                        автомобилями UzAuto</a>
+                                </h3>
+                                <p class="right-info-time">Северная газета (Армянск) 13:50</p>
                             </div>
                             <div class="right-info-box">
-                                <h3 class="right-info-title">В Фергане создадут узбекско-пакистанский университет</h3>
-                                <p class="right-info-time">Sputnik Узбекистан 14:09</p>
+                                <h3 class="right-info-title"><a href="about.html">Минтуризма опровергло приостановку
+                                        выплат за шаги</a></h3>
+                                <p class="right-info-time">Sputnik Узбекистан 14:32</p>
                             </div>
                         </div>
-                        <img class="right-info-img" src="img/info-big-img.jpg" height="335" alt=""
+                        <img class="right-info-img" src="img/info-big-img.jpg" height="338" alt=""
                             srcset="img/info-big-img.jpg 1x, img/info-big-img@2x.jpg 2x">
                     </div>
                 </div>
