--- a/contact.html
+++ b/contact.html
@@ -34,13 +34,20 @@
                     <div><a class="currency-rub" href="#"><span class="currency-symbol">P</span>138.26</a></div>
                 </div>
                 <div class="header-search">
-                    <input type="text" placeholder="Поиск" class="header-search-input">
+                    <input type="text" list="list-data" placeholder="Поиск" aria-label="Поиск" class="header-search-input">
                 </div>
                 <div class="header-lang">
                     <a href="#" class="lang active">УЗ</a>
                     <a href="#" class="lang">РУ</a>
                 </div>
                 <button class="header-btn">Войти</button>
+
+                <datalist id="list-data">
+                    <option value="Yangiliklar"></option>
+                    <option value="Filmlar"></option>
+                    <option value="Rasmlar"></option>
+                </datalist>
+
             </div>
         </div>
         <div class="container">
