--- a/about.html
+++ b/about.html
@@ -12,9 +12,10 @@
     
         <!-- CSS links -->
     
-        <link rel="stylesheet" href="./css/normalize.css">
+        <!-- <link rel="stylesheet" href="./css/normalize.css">
         <link rel="stylesheet" href="./css/shared.css">
-        <link rel="stylesheet" href="./css/about.css">
+        <link rel="stylesheet" href="./css/about.css"> -->
+        <link rel="stylesheet" href="./css/main-min.css">
 
     <title>N24 About</title>
 </head>
