--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
     <!-- CSS links -->
 
-    <link rel="stylesheet" href="./css/normalize.css">
+    <!-- <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/shared.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="./css/main-min.css">
+
     <title>N24</title>
 </head>
 
