Add custom property

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <!-- CSS links -->
 
-    <!-- <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/shared.css">
-    <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/main-min.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/main-min.css"> -->
 
     <title>N24</title>
 </head>
