--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
 
     <!-- CSS links -->
 
-    <link rel="stylesheet" href="./css/normalize.css">
+    <!-- <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/shared.css">
-    <link rel="stylesheet" href="./css/contact.css">
-    <!-- <link rel="stylesheet" href="./css/main-min.css"> -->
+    <link rel="stylesheet" href="./css/contact.css"> -->
+    <link rel="stylesheet" href="./css/main-min.css">
 
     <title>N24 Contact</title>
 </head>
