--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <!-- CSS links -->
 
-    <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
-    <!-- <link rel="stylesheet" href="./css/shared.css"> -->
-    <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/main-min.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/shared.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/main-min.css"> -->
 
     <title>N24</title>
 </head>
@@ -346,8 +346,8 @@
                 <p class="modal-text">
                     Хотите быть в курсе свежих новостей? <br> Включите уведомления!
                 </p>
-                <button class="notif-btn">Включит</button>
-                <button class="modal-close">
+                <button class="notif-btn-big">Включит</button>
+                <button class="modal-close js-modal-close">
                     <img class="modal-close-icon" src="./img/modal-close-icon.svg" width="13" height="13"
                         alt="close-icon">
                 </button>
