--- a/news-list.html
+++ b/news-list.html
@@ -14,10 +14,10 @@
 
     <!-- CSS links -->
 
-    <!-- <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/shared.css">
-    <link rel="stylesheet" href="./css/news-list.css"> -->
-    <link rel="stylesheet" href="./css/main-min.css">
+    <link rel="stylesheet" href="./css/news-list.css">
+    <!-- <link rel="stylesheet" href="./css/main-min.css"> -->
 
     <title>N24 Last News</title>
 </head>
@@ -280,6 +280,26 @@
             </div>
         </div>
     </footer>
+
+     <!-- Modal window -->
+
+     <div class="modal-window">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <p class="modal-text">
+                    Хотите быть в курсе свежих новостей? <br> Включите уведомления!
+                </p>
+                <button class="notif-btn-big">Включит</button>
+                <button class="modal-close js-modal-close">
+                    <img class="modal-close-icon" src="./img/modal-close-icon.svg" width="13" height="13"
+                        alt="close-icon">
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <script src="./js/script.js"></script>
+
 </body>
 
 </html>
