Add contact icon

--- a/about.html
+++ b/about.html
@@ -219,6 +219,10 @@
         </div>
     </div>
 
+    <!-- Contact us -->
+
+    <a class="contact-fixed-link" href="./contact.html"><img class="contact-fixed-icon" width="80" height="80" src="./img/contact_icon.png" alt="contact us icon"></a> 
+
     <script src="./js/script.js"></script>
 
 </body>
