Remove contact link fron shop imgs

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <!-- main shop img -->
 
             <div class="shop-img">
-                <a href="contact.html"><img src="img/shop-img.jpg" width="1200" height="128" alt="shop img"
-                        srcset="img/shop-img.jpg 1x, img/shop-img@2x.jpg 2x"></a>
+                <img src="img/shop-img.jpg" width="1200" height="128" alt="shop img"
+                    srcset="img/shop-img.jpg 1x, img/shop-img@2x.jpg 2x">
             </div>
 
             <!-- main card section -->
@@ -357,7 +357,8 @@
 
     <!-- Contact us -->
 
-    <a class="contact-fixed-link" href="./contact.html"><img class="contact-fixed-icon" width="80" height="80" src="./img/contact_icon.png" alt="contact us icon"></a> 
+    <a class="contact-fixed-link" href="./contact.html"><img class="contact-fixed-icon" width="80" height="80"
+            src="./img/contact_icon.png" alt="contact us icon"></a>
 
     <script src="./js/script.js"></script>
 
